--- a/app/src/main/res/menu/activity_logged_drawer.xml
+++ b/app/src/main/res/menu/activity_logged_drawer.xml
@@ -15,6 +15,11 @@
             android:id="@+id/nav_game"
             android:icon="@drawable/ic_gamepad_variant_accent_30dp"
             android:title="@string/nav_title_unes_adventure"/>
+
+        <item
+            android:id="@+id/nav_universe"
+            android:icon="@drawable/ic_atom_black_24dp"
+            android:title="@string/uneverse"/>
     </group>
 
     <group
