--- a/app/src/main/res/layout/item_card_event.xml
+++ b/app/src/main/res/layout/item_card_event.xml
@@ -5,20 +5,22 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+        <import type="android.view.View"/>
         <variable
             name="event"
             type="com.forcetower.uefs.db_service.entity.Event"/>
     </data>
+
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="6dp"
-        app:cardElevation="1dp"
+        app:cardElevation="4dp"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp">
+        android:layout_marginBottom="8dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -29,6 +31,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
                 tools:src="@drawable/mockup_campus_party"
+                app:imageUrl="@{event.imageUrl}"
                 android:scaleType="centerCrop"
                 android:contentDescription="@string/event_image"/>
             
@@ -38,6 +41,7 @@
                 android:maxLines="2"
                 android:padding="8dp"
                 tools:text="Campus Party Brasil 2018"
+                android:text="@{event.name}"
                 android:textSize="20sp"
                 android:textColor="@color/primaryText"
                 android:fontFamily="@font/roboto_regular"/>
@@ -50,9 +54,124 @@
                 android:paddingEnd="8dp"
                 android:paddingLeft="8dp"
                 android:paddingRight="8dp"
+                android:layout_marginBottom="8dp"
+                android:text="@{event.subtitle}"
                 android:textSize="15sp"
                 android:fontFamily="@font/roboto_regular"
                 tools:text="Evento focado em empreendedorismo e tecnologias de ponta no nosso seculo"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/divider"
+                android:layout_marginStart="4dp"
+                android:layout_marginLeft="4dp"
+                android:layout_marginEnd="4dp"
+                android:layout_marginRight="4dp"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:text="Evento inicia no dia 17/06/2018"
+                android:text="@{@string/event_start_date_format(event.startDate)}"
+                android:textSize="16sp"
+                android:textColor="@color/secondaryText"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="4dp"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:text="Começa às 17:00"
+                android:text="@{@string/event_start_time_format(event.startTime)}"
+                android:textSize="16sp"
+                android:textColor="@color/secondaryText"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginBottom="8dp"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
+                android:layout_marginBottom="8dp"
+                tools:text="LABOTEC III - Sala de Computação Aplicada"
+                android:text="@{event.location}"
+                android:textSize="15sp"/>
+
+            <TextView
+                android:visibility="@{event.isFree ? View.GONE : View.VISIBLE}"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@{@string/event_price_format(event.price)}"
+                tools:text="A entrada custa R$ 120,00"
+                android:textAlignment="gravity"
+                android:textSize="16sp"
+                android:gravity="center_vertical"
+                android:textColor="@color/primaryText"
+                android:drawableStart="@drawable/ic_monetization_on_black_24dp"
+                android:drawableLeft="@drawable/ic_monetization_on_black_24dp"
+                android:fontFamily="@font/roboto_regular"
+                android:drawablePadding="8dp"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"/>
+
+            <TextView
+                android:visibility="@{event.isFree ? View.GONE : View.VISIBLE}"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/event_is_free"
+                tools:text="A entrada do evento é gratuita"
+                android:textAlignment="gravity"
+                android:textSize="16sp"
+                android:gravity="center_vertical"
+                android:textColor="@color/primaryText"
+                android:drawableStart="@drawable/ic_money_off_black_24dp"
+                android:drawableLeft="@drawable/ic_money_off_black_24dp"
+                android:fontFamily="@font/roboto_regular"
+                android:drawablePadding="8dp"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
+                tools:visibility="gone"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:text="DA de Engenharia de Computação"
+                android:textSize="14sp"
+                android:fontFamily="@font/roboto_regular"
+                android:layout_marginTop="8dp"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:text="João Paulo Santos Sena"
+                android:textSize="12sp"
+                android:fontFamily="@font/roboto_regular"
+                android:layout_marginTop="2dp"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
+                android:layout_marginBottom="8dp"/>
 
         </LinearLayout>
 
