--- a/app/src/main/res/layout/item_card_unes_event_launch.xml
+++ b/app/src/main/res/layout/item_card_unes_event_launch.xml
@@ -3,9 +3,53 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
+    android:layout_height="100dp"
     app:cardElevation="4dp"
     app:cardCornerRadius="6dp"
     android:layout_margin="8dp">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/colorPrimary"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight=".7"
+                android:padding="16dp"
+                android:text="@string/event_card_announcement"
+                android:textColor="@color/white"
+                android:fontFamily="@font/roboto_medium"
+                android:textAlignment="gravity"
+                android:gravity="center_vertical"/>
+
+            <ImageView
+                android:id="@+id/logo"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight=".3"
+                android:padding="16dp"
+                app:srcCompat="@drawable/ic_unes_colored"
+                android:tint="@color/white"
+                android:contentDescription="@string/logo"/>
+
+        </LinearLayout>
+    </RelativeLayout>
 
 </android.support.v7.widget.CardView>
