--- a/app/src/main/res/layout/fragment_events.xml
+++ b/app/src/main/res/layout/fragment_events.xml
@@ -1,43 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <android.support.v4.widget.NestedScrollView
+    <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <LinearLayout
+        <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <include
-                layout="@layout/item_card_unes_event_launch"/>
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/recycler_events"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingBottom="8dp"
-                android:clipToPadding="false"
-                tools:listitem="@layout/item_card_event"
-                tools:itemCount="3">
-            </android.support.v7.widget.RecyclerView>
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/text_no_events"
-                android:visibility="gone"
-                android:layout_width="match_parent"
-                android:layout_height="300dp"
-                android:text="@string/no_events_created_yet"
-                android:textColor="@color/primaryText"
-                android:textAlignment="gravity"
-                android:gravity="center"
-                android:fontFamily="@font/roboto_regular"
-                android:textSize="16sp"
-                android:padding="8dp"/>
-        </LinearLayout>
-    </android.support.v4.widget.NestedScrollView>
+                <include
+                    layout="@layout/item_card_unes_event_launch"/>
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/recycler_events"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="8dp"
+                    android:clipToPadding="false"
+                    tools:listitem="@layout/item_card_event"
+                    tools:itemCount="3">
+                </android.support.v7.widget.RecyclerView>
+
+                <TextView
+                    android:id="@+id/text_no_events"
+                    android:visibility="gone"
+                    android:layout_width="match_parent"
+                    android:layout_height="300dp"
+                    android:text="@string/no_events_created_yet"
+                    android:textColor="@color/primaryText"
+                    android:textAlignment="gravity"
+                    android:gravity="center"
+                    android:fontFamily="@font/roboto_regular"
+                    android:textSize="16sp"
+                    android:padding="8dp"/>
+            </LinearLayout>
+        </android.support.v4.widget.NestedScrollView>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/btn_create_event"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|bottom"
+            android:layout_margin="16dp"
+            app:srcCompat="@drawable/ic_create_black_24dp"
+            android:tint="@color/white"/>
+    </android.support.design.widget.CoordinatorLayout>
 </layout>
