--- a/app/src/main/res/layout/fragment_event_creation_start.xml
+++ b/app/src/main/res/layout/fragment_event_creation_start.xml
@@ -19,7 +19,10 @@
                 android:layout_height="wrap_content"
                 android:text="@string/publish_your_event_on_unes"
                 android:textColor="@color/white"
-                android:fontFamily="@font/roboto_regular"/>
+                android:fontFamily="@font/roboto_regular"
+                android:textAlignment="gravity"
+                android:gravity="center"
+                android:layout_marginBottom="16dp"/>
 
             <ImageView
                 android:layout_width="match_parent"
@@ -32,7 +35,10 @@
                 android:layout_height="wrap_content"
                 android:text="@string/event_publish_approval_message"
                 android:textColor="@color/white"
-                android:fontFamily="@font/roboto_regular"/>
+                android:fontFamily="@font/roboto_regular"
+                android:textAlignment="gravity"
+                android:gravity="center"
+                android:layout_marginTop="16dp"/>
 
         </LinearLayout>
 
