--- a/app/src/main/res/layout/fragment_event_creation_three.xml
+++ b/app/src/main/res/layout/fragment_event_creation_three.xml
@@ -6,13 +6,15 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/background">
+        android:background="@color/background"
+        android:animateLayoutChanges="true">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="16dp">
+            android:padding="16dp"
+            android:animateLayoutChanges="true">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -55,6 +57,7 @@
                 android:checked="false"/>
 
             <android.support.design.widget.TextInputLayout
+                android:id="@+id/price_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <android.support.design.widget.TextInputEditText
@@ -75,6 +78,7 @@
                 android:checked="true"/>
 
             <android.support.design.widget.TextInputLayout
+                android:id="@+id/hours_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <android.support.design.widget.TextInputEditText
@@ -99,18 +103,15 @@
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp">
                 <android.support.design.widget.TextInputEditText
                     android:id="@+id/event_organization"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/event_organization_hint"
                     android:fontFamily="@font/roboto_regular"
-                    android:inputType="time"
-                    android:focusable="false"
-                    android:clickable="true"
-                    android:cursorVisible="false"
-                    android:focusableInTouchMode="false"/>
+                    android:inputType="text|textCapSentences"/>
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
