--- a/app/src/main/res/layout/item_card_event.xml
+++ b/app/src/main/res/layout/item_card_event.xml
@@ -27,13 +27,27 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <ImageView
+            <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
-                tools:src="@drawable/mockup_campus_party"
-                app:imageUrl="@{event.imageUrl}"
-                android:scaleType="centerCrop"
-                android:contentDescription="@string/event_image"/>
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:id="@+id/event_image"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_marginEnd="0dp"
+                    android:layout_marginStart="0dp"
+                    android:layout_marginTop="0dp"
+                    app:imageUrl="@{event.imageUrl}"
+                    tools:src="@drawable/mockup_campus_party"
+                    app:layout_constraintDimensionRatio="H,16:9"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:contentDescription="@string/event_image"/>
+            </android.support.constraint.ConstraintLayout>
             
             <TextView
                 android:layout_width="match_parent"
