--- a/app/src/main/res/layout/fragment_event_creation_four.xml
+++ b/app/src/main/res/layout/fragment_event_creation_four.xml
@@ -48,11 +48,9 @@
                 android:textColor="@color/colorPrimary"
                 android:fontFamily="@font/roboto_regular"/>
 
-            <android.support.v7.widget.CardView
+            <android.support.design.widget.CoordinatorLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:cardCornerRadius="6dp"
-                app:cardElevation="4dp">
+                android:layout_height="wrap_content">
 
                 <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
@@ -95,7 +93,7 @@
                     android:textColor="@color/white"
                     android:fontFamily="@font/roboto_medium"
                     android:visibility="gone"/>
-            </android.support.v7.widget.CardView>
+            </android.support.design.widget.CoordinatorLayout>
 
             <android.support.v7.widget.AppCompatButton
                 android:id="@+id/btn_continue"
