--- a/app/src/main/res/layout/item_card_event.xml
+++ b/app/src/main/res/layout/item_card_event.xml
@@ -53,138 +53,124 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:maxLines="2"
-                android:padding="8dp"
+                android:layout_marginTop="16dp"
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
                 tools:text="Campus Party Brasil 2018"
                 android:text="@{event.name}"
-                android:textSize="20sp"
+                android:textSize="24sp"
                 android:textColor="@color/primaryText"
                 android:fontFamily="@font/roboto_regular"/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                tools:text="DA de Engenharia de Computação"
+                android:textSize="12sp"
+                android:fontFamily="@font/roboto_regular"
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:text="@{event.offeredBy}"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:maxLines="5"
-                android:paddingStart="8dp"
-                android:paddingEnd="8dp"
-                android:paddingLeft="8dp"
-                android:paddingRight="8dp"
+                android:layout_marginTop="8dp"
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
                 android:layout_marginBottom="8dp"
                 android:text="@{event.subtitle}"
-                android:textSize="15sp"
+                android:textSize="14sp"
                 android:fontFamily="@font/roboto_regular"
                 tools:text="Evento focado em empreendedorismo e tecnologias de ponta no nosso seculo"/>
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/divider"
-                android:layout_marginStart="4dp"
-                android:layout_marginLeft="4dp"
-                android:layout_marginEnd="4dp"
-                android:layout_marginRight="4dp"/>
-
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:text="Evento inicia no dia 17/06/2018"
-                android:text="@{@string/event_start_date_format(event.startDate)}"
+                tools:text="17/06/2018 às 17:00"
+                android:text="@{@string/event_start_date_format(event.startDate, event.startTime)}"
                 android:textSize="16sp"
-                android:textColor="@color/secondaryText"
-                android:paddingStart="8dp"
-                android:paddingEnd="8dp"
-                android:paddingLeft="8dp"
-                android:paddingRight="8dp"
+                android:textColor="@color/colorPrimary"
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginBottom="4dp"/>
+                android:layout_marginBottom="4dp"
+                android:fontFamily="@font/roboto_medium"/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:text="Começa às 17:00"
-                android:text="@{@string/event_start_time_format(event.startTime)}"
-                android:textSize="16sp"
-                android:textColor="@color/secondaryText"
-                android:paddingStart="8dp"
-                android:paddingEnd="8dp"
-                android:paddingLeft="8dp"
-                android:paddingRight="8dp"
-                android:layout_marginTop="4dp"
-                android:layout_marginBottom="8dp"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingStart="8dp"
-                android:paddingEnd="8dp"
-                android:paddingLeft="8dp"
-                android:paddingRight="8dp"
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
                 android:layout_marginBottom="8dp"
                 tools:text="LABOTEC III - Sala de Computação Aplicada"
                 android:text="@{event.location}"
-                android:textSize="15sp"/>
+                android:textSize="16sp"
+                android:textColor="@color/colorPrimary"
+                android:fontFamily="@font/roboto_medium"/>
 
             <TextView
                 android:visibility="@{event.isFree ? View.GONE : View.VISIBLE}"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="20dp"
                 android:text="@{@string/event_price_format(event.price)}"
-                tools:text="A entrada custa R$ 120,00"
+                tools:text="R$ 120,00"
                 android:textAlignment="gravity"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 android:gravity="center_vertical"
                 android:textColor="@color/primaryText"
                 android:drawableStart="@drawable/ic_monetization_on_black_24dp"
                 android:drawableLeft="@drawable/ic_monetization_on_black_24dp"
                 android:fontFamily="@font/roboto_regular"
                 android:drawablePadding="8dp"
-                android:paddingStart="8dp"
-                android:paddingEnd="8dp"
-                android:paddingLeft="8dp"
-                android:paddingRight="8dp"/>
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"/>
 
             <TextView
-                android:visibility="@{event.isFree ? View.GONE : View.VISIBLE}"
+                android:visibility="@{event.isFree ? View.VISIBLE : View.GONE}"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="20dp"
                 android:text="@string/event_is_free"
-                tools:text="A entrada do evento é gratuita"
+                tools:text="Gratuito"
                 android:textAlignment="gravity"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 android:gravity="center_vertical"
                 android:textColor="@color/primaryText"
                 android:drawableStart="@drawable/ic_money_off_black_24dp"
                 android:drawableLeft="@drawable/ic_money_off_black_24dp"
                 android:fontFamily="@font/roboto_regular"
                 android:drawablePadding="8dp"
-                android:paddingStart="8dp"
-                android:paddingEnd="8dp"
-                android:paddingLeft="8dp"
-                android:paddingRight="8dp"
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
                 tools:visibility="gone"/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:text="DA de Engenharia de Computação"
-                android:textSize="14sp"
-                android:fontFamily="@font/roboto_regular"
-                android:layout_marginTop="8dp"
-                android:paddingStart="8dp"
-                android:paddingEnd="8dp"
-                android:paddingLeft="8dp"
-                android:paddingRight="8dp"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
                 tools:text="João Paulo Santos Sena"
+                android:text="@{event.creatorName}"
                 android:textSize="12sp"
                 android:fontFamily="@font/roboto_regular"
-                android:layout_marginTop="2dp"
-                android:paddingStart="8dp"
-                android:paddingEnd="8dp"
-                android:paddingLeft="8dp"
-                android:paddingRight="8dp"
+                android:layout_marginTop="8dp"
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
                 android:layout_marginBottom="8dp"/>
 
         </LinearLayout>
