--- a/app/src/main/res/layout/item_reminder.xml
+++ b/app/src/main/res/layout/item_reminder.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+        <import type="android.view.View"/>
         <variable
             name="reminder"
             type="com.forcetower.uefs.db.entity.TodoItem"/>
@@ -11,7 +13,53 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
         android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:text="Evento importante"
+            android:text="@{reminder.title}"
+            android:textColor="@color/primaryText"
+            android:textSize="15sp"
+            android:fontFamily="@font/roboto_medium"
+            android:layout_marginStart="36dp"
+            android:layout_marginLeft="36dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"/>
+
+        <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:text="Evento bem legal que vai ter na Universidade sobre muitas coisas absurdas. Não posso perder"
+        android:text="@{reminder.message}"
+        android:textColor="@color/secondaryText"
+        android:textSize="13sp"
+        android:fontFamily="@font/roboto_regular"
+        android:layout_marginStart="36dp"
+        android:layout_marginLeft="36dp"
+        android:paddingTop="4dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:text="26/05/2018"
+            android:visibility="@{reminder.hasTimeLimit ? View.VISIBLE : View.GONE}"
+            android:text="@{reminder.date}"
+            android:textColor="@color/secondaryText"
+            android:textSize="12sp"
+            android:fontFamily="@font/roboto_regular"
+            android:layout_marginStart="36dp"
+            android:layout_marginLeft="36dp"
+            android:paddingTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"/>
+
+
 
     </LinearLayout>
 </layout>
