--- a/app/src/main/res/layout/fragment_reminders_annotations.xml
+++ b/app/src/main/res/layout/fragment_reminders_annotations.xml
@@ -28,6 +28,7 @@
 
                     <android.support.v7.widget.SwitchCompat
                         android:id="@+id/show_completed"
+                        android:visibility="gone"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/show_complete_todo_items"
