--- a/app/src/main/res/layout/item_card_event.xml
+++ b/app/src/main/res/layout/item_card_event.xml
@@ -120,44 +120,68 @@
                 android:textColor="@color/colorPrimary"
                 android:fontFamily="@font/roboto_medium"/>
 
-            <TextView
+            <LinearLayout
                 android:visibility="@{event.isFree ? View.GONE : View.VISIBLE}"
                 android:layout_width="match_parent"
                 android:layout_height="20dp"
-                android:text="@{@string/event_price_format(event.price)}"
-                tools:text="R$ 120,00"
-                android:textAlignment="gravity"
-                android:textSize="14sp"
-                android:gravity="center_vertical"
-                android:textColor="@color/primaryText"
-                android:drawableStart="@drawable/ic_monetization_on_black_24dp"
-                android:drawableLeft="@drawable/ic_monetization_on_black_24dp"
-                android:fontFamily="@font/roboto_regular"
-                android:drawablePadding="8dp"
-                android:paddingStart="16dp"
-                android:paddingEnd="16dp"
-                android:paddingLeft="16dp"
-                android:paddingRight="16dp"/>
-
-            <TextView
-                android:visibility="@{event.isFree ? View.VISIBLE : View.GONE}"
-                android:layout_width="match_parent"
-                android:layout_height="20dp"
-                android:text="@string/event_is_free"
-                tools:text="Gratuito"
-                android:textAlignment="gravity"
-                android:textSize="14sp"
-                android:gravity="center_vertical"
-                android:textColor="@color/primaryText"
-                android:drawableStart="@drawable/ic_money_off_black_24dp"
-                android:drawableLeft="@drawable/ic_money_off_black_24dp"
-                android:fontFamily="@font/roboto_regular"
-                android:drawablePadding="8dp"
                 android:paddingStart="16dp"
                 android:paddingEnd="16dp"
                 android:paddingLeft="16dp"
                 android:paddingRight="16dp"
-                tools:visibility="gone"/>
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    app:srcCompat="@drawable/ic_monetization_on_black_24dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginRight="8dp"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    android:text="@{@string/event_price_format(event.price)}"
+                    tools:text="R$ 120,00"
+                    android:textAlignment="gravity"
+                    android:textSize="14sp"
+                    android:gravity="center_vertical"
+                    android:textColor="@color/primaryText"
+                    android:fontFamily="@font/roboto_regular"/>
+            </LinearLayout>
+
+
+
+            <LinearLayout
+                android:visibility="@{event.isFree ? View.VISIBLE : View.GONE}"
+                android:layout_width="match_parent"
+                android:layout_height="20dp"
+                android:paddingStart="16dp"
+                android:paddingEnd="16dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:orientation="horizontal"
+                tools:visibility="gone">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    app:srcCompat="@drawable/ic_money_off_black_24dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginRight="8dp"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="20dp"
+                    android:text="@string/event_is_free"
+                    tools:text="Gratuito"
+                    android:textAlignment="gravity"
+                    android:textSize="14sp"
+                    android:gravity="center_vertical"
+                    android:textColor="@color/primaryText"
+                    android:fontFamily="@font/roboto_regular"
+                    android:drawablePadding="8dp"/>
+
+            </LinearLayout>
 
             <TextView
                 android:layout_width="match_parent"
