--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#2196F3</color>
     <color name="colorPrimaryDark">#1976D2</color>
     <color name="colorPrimaryLight">#BBDEFB</color>
+    <color name="colorPrimarySuperDark">#000133</color>
     <color name="colorAccent">#FF5722</color>
 
     <color name="white">#FFFFFF</color>
