--- a/app/src/main/res/xml-v26/preferences.xml
+++ b/app/src/main/res/xml-v26/preferences.xml
@@ -48,6 +48,11 @@
             android:title="@string/pref_grades_date_changed"
             android:summary="@string/pref_notification_grade_date_changed"
             android:icon="@drawable/ic_date_accent_30dp"/>
+        <Preference
+            android:key="notification_events_general"
+            android:title="@string/pref_events"
+            android:summary="@string/pref_show_events_notification"
+            android:icon="@drawable/ic_balloon_accent_30dp"/>
     </PreferenceCategory>
 
     <PreferenceCategory
