--- a/app/src/main/res/layout/fragment_event_creation_four.xml
+++ b/app/src/main/res/layout/fragment_event_creation_four.xml
@@ -95,6 +95,18 @@
                     android:visibility="gone"/>
             </android.support.design.widget.CoordinatorLayout>
 
+            <TextView
+                android:layout_marginTop="16dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/what_course_is_this_for"/>
+
+            <android.support.v7.widget.AppCompatSpinner
+                android:id="@+id/spi_course"
+                android:layout_width="match_parent"
+                android:layout_height="40dp">
+            </android.support.v7.widget.AppCompatSpinner>
+
             <android.support.v7.widget.AppCompatButton
                 android:id="@+id/btn_continue"
                 android:layout_marginTop="16dp"
