--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="secondaryText">#757575</color>
 
     <color name="color_event">#ffcf0e</color>
+    <color name="color_system_notification">#ccff90</color>
 
     <color name="divider">#BDBDBD</color>
     <color name="background">#f8f8f8</color>
