--- a/app/src/main/res/layout/fragment_control_room_selection.xml
+++ b/app/src/main/res/layout/fragment_control_room_selection.xml
@@ -47,6 +47,14 @@
                 android:layout_margin="8dp"
                 style="@style/Widget.AppCompat.Button.Colored"/>
 
+            <android.support.v7.widget.AppCompatButton
+                android:id="@+id/delete_unes_messages"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/delete_unes_messages"
+                android:layout_margin="8dp"
+                style="@style/Widget.AppCompat.Button.Colored"/>
+
         </LinearLayout>
 
     </ScrollView>
