--- a/app/src/main/res/layout/fragment_login_form.xml
+++ b/app/src/main/res/layout/fragment_login_form.xml
@@ -72,12 +72,12 @@
                         android:id="@+id/et_login_username"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:inputType="textNoSuggestions|textEmailAddress"
-                        android:maxLines="1"
-                        android:maxLength="50"
-                        android:imeOptions="actionNext"
+                        android:fontFamily="@font/roboto_regular"
                         android:hint="@string/login_username"
-                        android:fontFamily="@font/roboto_regular"/>
+                        android:imeOptions="actionNext"
+                        android:inputType="textNoSuggestions|textEmailAddress"
+                        android:maxLength="50"
+                        android:maxLines="1" />
                 </android.support.design.widget.TextInputLayout>
 
                 <android.support.design.widget.TextInputLayout
