--- a/app/src/main/res/layout/fragment_universe_access_verif.xml
+++ b/app/src/main/res/layout/fragment_universe_access_verif.xml
@@ -1,29 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/white">
-
-    <ImageView
-        android:id="@+id/iv_logo"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        app:srcCompat="@drawable/ic_unes_colored"
-        android:layout_centerInParent="true"
-        android:transitionName="@string/transition_logo"/>
-
-
-    <TextView
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:padding="16dp"
-        android:text="@string/universe_loading"
-        android:textColor="@color/primaryText"
-        android:textSize="20sp"
-        android:textAlignment="center"
-        android:fontFamily="@font/roboto_medium"/>
-</RelativeLayout>
+        android:layout_height="match_parent"
+        android:background="@color/white">
+
+        <ImageView
+            android:id="@+id/iv_logo"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            app:srcCompat="@drawable/ic_unes_colored"
+            android:layout_centerInParent="true"
+            android:transitionName="@string/transition_logo"/>
+
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:padding="16dp"
+            android:text="@string/universe_loading"
+            android:textColor="@color/primaryText"
+            android:textSize="20sp"
+            android:textAlignment="center"
+            android:fontFamily="@font/roboto_medium"/>
+    </RelativeLayout>
+</layout>
