--- a/app/src/main/res/layout/activity_control_room.xml
+++ b/app/src/main/res/layout/activity_control_room.xml
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<layout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.forcetower.uefs.view.control_room.ControlRoomActivity">
-
-    <include
-        android:id="@+id/inc_toolbar"
-        layout="@layout/toolbar"/>
-
-    <FrameLayout
-        android:id="@+id/container"
-        android:layout_below="@id/inc_toolbar"
+    xmlns:tools="http://schemas.android.com/tools">
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </FrameLayout>
+        android:layout_height="match_parent"
+        tools:context="com.forcetower.uefs.view.control_room.ControlRoomActivity">
 
-</RelativeLayout>
+        <include
+            android:id="@+id/inc_toolbar"
+            layout="@layout/toolbar"/>
+
+        <FrameLayout
+            android:id="@+id/container"
+            android:layout_below="@id/inc_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </FrameLayout>
+
+    </RelativeLayout>
+</layout>
